[package]
name = "loongArch64"
version = "0.2.6"
edition = "2024"
description = "loongArch64 support for Rust"
license = "MIT"
authors = ["Godones <chenlinfeng25@outlook.com>"]
readme = "README.md"
repository = "https://github.com/Godones/loongArch64"
keywords = ["loongarch64", "la64"]
documentation = "https://docs.rs/loongArch64"

[dependencies]
bit_field = "0.10"
bitflags = "2.9"
